[package]
name = "ledger-parser"
version = "2.2.0"
authors = ["Marek G <marek@nomail.com>"]
description = "Rust library for parsing ledger cli (https://www.ledger-cli.org/) input files."
license = "Unlicense"
repository = "https://github.com/marek-g/rust-ledger-parser"
readme = "README.md"
documentation = "https://docs.rs/ledger-parser"
keywords = ["parser", "ledger", "ledger-cli"]
categories = ["parsing"]

[dependencies]
nom = "4"
chrono = "0.4"
rust_decimal = "0.11"
