[package]
name = "ledger-parser"
version = "4.1.0"
authors = ["Marek Gibek <marek-dev@yandex.com>"]
description = "Rust library for parsing ledger cli (https://www.ledger-cli.org/) input files."
license = "Unlicense"
repository = "https://github.com/marek-g/rust-ledger-parser"
readme = "README.md"
documentation = "https://docs.rs/ledger-parser"
keywords = ["parser", "ledger", "ledger-cli"]
categories = ["parser-implementations"]
edition = "2021"

[dependencies]
nom = "7"
chrono = "0.4"
rust_decimal = "1"
